package group_assignment.entity;

public enum Status {
  ACTIVE,
  RETIRED;
}
